# Ophelia

./: .commit_msg.txt  .gitignore  AGENTS.md  PROMPTER.example.md  README.md  _commit_msg.txt  config.example.env  constraints-termux.txt  games.example.yaml  goals.example.yaml  mcp.example.json  pyproject.toml  requirements.txt
docs/: INSTALL.md  channels.md  games.md  local-first.md  migrate-old-phone.md  neuro-ensemble.md  pc-setup.md  pc-ui.md  remote-adb.md  setup.md  site.md  tier1-setup.md  tier2-setup.md  transfer.md  why-not-hermes.md
packaging/: termux_metadata_hook.py
scripts/: install.ps1  install.sh  kokoro-proot-build.sh  ophelia  phone_control.sh  shizuku-start.sh  termux-boot.sh  termux-constraints.txt  termux-export-hermes.sh  termux-import-hermes.sh  termux-install.sh  termux-kokoro-proot-setup.sh  termux-kokoro-setup.sh  termux-pip-env.sh  termux-repair.sh  termux-shizuku-setup.sh  termux-survival.sh
scripts/kokoro-patches/: .gitignore  patch-audiopus-build-rs.py  patch-espeak-rs-sys-build-rs.py
scripts/patches/: audiopus_sys-android-build.rs.patch
src/ophelia/: __init__.py  __main__.py  cli.py  config.py  platform.py  timeutil.py
src/ophelia/android/: __init__.py  adb.py  factory.py  games.py  harden.py  shizuku.py  vision.py
src/ophelia/channels/: __init__.py  base.py  chat_log.py  discord_bot.py  discord_log_channels.py  guest_approval.py  hub.py  inbound_media.py  media_reply.py  message_split.py  proactive_filter.py  session.py  telegram_bot.py  telegram_util.py
src/ophelia/core/: agent_loop.py  crashlog.py  orchestrator.py  signals.py  single_instance.py  tool_call_parse.py
src/ophelia/diagnostics/: __init__.py  self_check.py
src/ophelia/media/: voice.py  (+8 more)
tests/: conftest.py  test_alive_changes.py  test_alive_changes_wave3.py  test_alive_free_will.py  test_avatar.py  test_civitai.py  test_crashlog.py  test_deepseek_thinking.py  test_delivery_and_log_honesty.py  test_director_and_curator.py  test_discord_log_channels.py  test_dm_logging_fixes.py  test_duplicate_inbound.py  test_greet_owner_only.py  test_guest_bridge.py  test_guest_experience.py  test_guest_outreach.py  test_guest_presence_and_safety.py  test_guest_relay_and_recall.py  test_humor_tracker.py  test_identity_grounding.py  test_image_backend_annotation.py  test_inbound_media.py  test_inbox_images.py  test_inner_log_mirror.py  test_kokoro_mix.py  test_launcher_and_search.py  test_life_context.py  test_log_outgoing.py  test_media_relay.py  test_mood_and_resume.py  test_ophelia_alive_requests.py  test_owner_recognition.py  test_phone_body_diagnostics.py  test_proactive_filter.py  test_set_timezone.py  test_setup_ollama_vision.py  test_site.py  test_site_cloudflare.py  test_site_setup_menu.py  (+7 more)
(+77 files in other folders)
