[project]
name = "ophelia"
version = "0.1.0"
description = "Autonomous Grok-powered agent for Termux with Telegram control"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28",
    "openai>=1.68",
    "python-telegram-bot>=21.10",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "aiosqlite>=0.20",
    "apscheduler>=3.11",
    "structlog>=24.4",
    "pyyaml>=6.0",
]

[project.scripts]
ophelia = "ophelia.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ophelia"]

[tool.hatch.build]
sources = ["src"]
