[project]
name = "ophelia"
version = "0.2.0"
description = "Autonomous local-first AI — run on PC, server, VPS, or optionally Termux"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "openai>=1.35",
    "python-telegram-bot>=21.10",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "aiosqlite>=0.20",
    "apscheduler>=3.11",
    "structlog>=24.4",
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "discord.py>=2.4",
    "pillow>=10.0",
]

[project.scripts]
ophelia = "ophelia.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ophelia"]

[tool.hatch.build.targets.wheel.force-include]
"src/ophelia/ui/static" = "ophelia/ui/static"

[tool.hatch.build]
sources = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
