[project]
name = "ophelia"
version = "0.4.0"
description = "Autonomous local-first AI — run on PC, server, VPS, or optionally Termux"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "openai>=1.35",
    "python-telegram-bot>=21.10",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "aiosqlite>=0.20",
    "apscheduler>=3.11",
    "structlog>=24.4",
    "pyyaml>=6.0",
    "tzdata>=2024.1",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "discord.py>=2.4",
    "pillow>=10.0",
    "numpy>=1.26",
]

[project.scripts]
ophelia = "ophelia.cli:main"

[project.optional-dependencies]
site = ["blake3>=0.4"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ophelia"]

[tool.hatch.build]
sources = ["src"]

[tool.hatch.metadata.hooks.custom]
path = "packaging/termux_metadata_hook.py"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
